--- a/.babelrc
+++ b/.babelrc
@@ -8,10 +8,12 @@
     }],
     "stage-2"
   ],
-  "plugins": [["import", {
-    "libraryName": "iview",
-    "libraryDirectory": "src/components"
-  }]],
+  "plugins": [
+//    ["import", {
+//      "libraryName": "iview",
+//      "libraryDirectory": "src/components"
+//    }]
+  ],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
