--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
   "author": "llldddbbb <571002217@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "cross-env NODE_ENV=testing webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js",
-    "analyze": "cross-env NODE_ENV=production npm_config_report=true npm run build"
+    "analyze": "cross-env NODE_ENV=production node build/build.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "element-ui": "2.3.2",
     "highlight.js": "^9.12.0",
     "iview": "^2.14.2",
+    "marked": "^0.6.1",
+    "mavon-editor": "^2.3.1",
+    "node-sass": "^4.13.0",
+    "sass-loader": "6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.5.2",
+    "vue-cookie": "1.1.4",
     "vue-nav-tabs": "^0.5.6",
     "vue-router": "^3.0.1",
     "vuex": "3.0.1"
